--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_PATH=. NODE_ENV=dev nodemon index.js",
+    "start": "NODE_PATH=. NODE_ENV=dev nodemon src/index.js",
     "test": "test"
   },
   "author": "Fatih Demirel",
