--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-react": "^7.3.0",
     "istanbul": "^0.4.5",
+    "mocha": "^3.5.0",
     "nyc": "^11.1.0",
     "tv": "^6.1.0"
   }
