--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "vision": "^4.1.1"
   },
   "devDependencies": {
+    "chai": "^4.1.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-react": "^7.3.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.0",
     "nyc": "^11.1.0",
+    "sinon": "^3.2.1",
     "tv": "^6.1.0"
   }
 }
