Checking coverage threshold of 100 to fail the build.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "NODE_PATH=. NODE_ENV=dev nodemon src/index.js",
     "test": "NODE_PATH=. NODE_ENV=test mocha --recursive",
-    "coverage": "NODE_PATH=. NODE_ENV=test nyc -x '**/src/middleware/**' -x '**/src/validators/**' -x '**/src/routes/**' -x '**/src/index.js' -x '**/test/**' --reporter=html --reporter=text mocha --recursive"
+    "coverage": "NODE_PATH=. NODE_ENV=test nyc -x '**/src/middleware/**' -x '**/src/validators/**' -x '**/src/routes/**' -x '**/src/index.js' -x '**/test/**' --reporter=html --reporter=text mocha --recursive",
+    "checkcoverage": "NODE_PATH=. NODE_ENV=test nyc check-coverage --lines 100"
   },
   "author": "Fatih Demirel",
   "license": "MIT",
