--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
   - psql -U postgres -d HapiExample_dev -a -f "./src/sql/init.sql"
 script:
   - npm run coverage
+  - npm run checkcoverage
 notifications:
   recipients:
     - demirel-fth-93@outlook.com
